# local-lakehouse

./: .env.variables  .gitignore
airflow/: README.md  mwaa-local-env
airflow/dags/: lunch_money_dag.py  raw_auto_tables.py
airflow/docker/: docker-compose-local.yml
airflow/docker/config/: airflow.cfg
airflow/requirements/: requirements.txt
airflow/source/: defaults.py
package/pilot/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
package/pilot/.github/: ISSUE_TEMPLATE.md
package/pilot/docs/: index.md  installation.md  usage.md
package/pilot/src/pilot/: .env.variables  __init__.py  cli.py  utils.py
package/pilot/src/pilot/connections/: decorators.py
package/pilot/src/pilot/connections/chicago_public_library/: README.md
package/pilot/src/pilot/connections/google/gmail/: README.md
package/pilot/src/pilot/connections/lunch_money/: __init__.py
package/pilot/src/pilot/connections/newsapi/: README.md
package/pilot/tests/: test_pilot.py
warehouse/configs/: instagram.json
