[project]
name = "pilot"
version = "0.1.0"
description = "not a pilot"
readme = "README.md"
authors = [
  {name = "Pilot Sway", email = "iamnopilot@gmail.com"}
]
maintainers = [
  {name = "Pilot Sway", email = "iamnopilot@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer",
  "python-dotenv",
  "requests"
]
requires-python = ">= 3.10"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/iamnopilot/pilot/issues"
changelog = "https://github.com/iamnopilot/pilot/blob/master/changelog.md"
homepage = "https://github.com/iamnopilot/pilot"

[project.scripts]
pilot = "pilot.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
